--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,95 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
+/* styles/globals.css */
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
 }
+
+.search-bar {
+  width: 50%;
+  display: flex;
+  position: fixed;
+  top: 70px;
+  left: 25%;
+  right: 25%;
+  background-color: #3ba1c5;
+  transition: height 1s ease-in-out;
+  padding: 10px;
+  border-radius: 5px 5px 5px 5px;
+  z-index: 1000;
+}
+
+/* .text{
+  background-color: #3ba1c5;
+  color: black;
+  
+} */
+
+.search-bar input {
+  flex: 1; /* Take up remaining space */
+  background-color: #3ba1c5;
+  border: none;
+  outline: none;
+  padding: 10px;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  border-radius: 0;
+}
+
+.close-icon {
+  cursor: pointer;
+  font-size: 20px;
+  color: black;
+  margin-left: 63%;
+}
+
+.navbar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 20px;
+  margin-top: 40px; /* Adjust the margin to fit your layout */
+}
+
+.search-icon {
+  cursor: pointer;
+  font-size: 24px;
+  /* margin-right: 10px; */
+  margin-bottom: 35px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* Styling the navigation menu */
+ul.nav-menu {
+  display: flex;
+  background-color: #f4f4f4;
+}
+
+li {
+  margin: 0;
+}
+
+/* Styling the navigation links */
+/* li Link {
+  text-decoration: none;
+  padding: 10px 20px;
+  display: block;
+  color: #333;
+} */
+
+/* Adding underline to the active page and changing its color */
+li.active Link {
+  border-bottom: 2px solid #007bff; /* Change this color to the desired active color */
+  color: #007bff; /* Change this color to the desired active color */
+}  
