--- a/app/globals.css
+++ b/app/globals.css
@@ -92,4 +92,12 @@ li {
 li.active Link {
   border-bottom: 2px solid #007bff; /* Change this color to the desired active color */
   color: #007bff; /* Change this color to the desired active color */
-}  
+} 
+
+.barline{
+  border: none;
+  width: 100%;
+  height: 3px;
+  background-color: red;
+  border-radius: 10%;
+}
