--- a/app/globals.css
+++ b/app/globals.css
@@ -98,6 +98,10 @@ li.active Link {
   border: none;
   width: 100%;
   height: 3px;
-  background-color: red;
+  background-color: rgb(250, 192, 4);
   border-radius: 10%;
+}
+
+link{
+  text-decoration-line: none;
 }
