--- a/app/components/heroProduct/HeroProduct.css
+++ b/app/components/heroProduct/HeroProduct.css
@@ -5,7 +5,7 @@
 
 .Hero-container{
     width: 75%;
-    height: 75%;
+    min-height: 75%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,13 +14,14 @@
 .Hero-container-left{
     margin: 15px;
     padding-left: 20px;
+    margin-left: 100px;
     
 }
 
 .Hero-container-left h1{
-    margin:  0px 50px 50px 150px;
+    margin:  20px 50px 50px 100px;
     padding: 0px 50px 10px 50px;
-    font-size: xx-large;
+    /* font-size: 3x-large; */
     font-weight: bolder;
     font-family: 'Times New Roman', Times, serif;
     font-style: normal;
@@ -28,16 +29,20 @@
 }
 
 .Hero-container-left p {
-    margin:  0px 50px 50px 50px;
+    margin:  0px 50px 50px 100px;
     padding: 0px 50px 10px 50px;
 }
 
 .Hero-container-left button{
-    margin:  0px 50px 10px 200px;
+    margin:  0px 50px 10px 150px;
     padding: 0px 50px 10px 50px;
 }
 
 .Hero-container-right {
     margin:  10px 0px 10px 20px;
+    padding: 0px 50px 10px 50px;
+}
 
+.Hero-container-right Image{
+    margin-left: 30px;
 }
